--- a/exposities.html
+++ b/exposities.html
@@ -69,10 +69,10 @@
 						<td>AR.T</td>
 					</tr>
 					<tr class="extraRow"><td colspan="4">&raquo Op 1 en 2 oktober.</td></tr>
-					<tr class="extraRow"><td colspan="4"><img src="photos/overig/expositie_deverdieping16_1.jpg" alt="deverdieping16_1" />
-					<img src="photos/overig/expositie_deverdieping16_2.jpg" alt="deverdieping16_2" /></td></tr>
-					<tr class="extraRow"><td colspan="4"><img src="photos/overig/expositie_deverdieping16_3.jpg" alt="deverdieping16_3" />
-					<img src="photos/overig/expositie_deverdieping16_4.jpg" alt="deverdieping16_4" /></td></tr>
+					<tr class="extraRow"><td colspan="4"><img src="photos/overig/expositie_deverdieping16_1.JPG" alt="deverdieping16_1" />
+					<img src="photos/overig/expositie_deverdieping16_2.JPG" alt="deverdieping16_2" /></td></tr>
+					<tr class="extraRow"><td colspan="4"><img src="photos/overig/expositie_deverdieping16_3.JPG" alt="deverdieping16_3" />
+					<img src="photos/overig/expositie_deverdieping16_4.JPG" alt="deverdieping16_4" /></td></tr>
 
 					<tr class="tableRow">
 						<td>2016</td>
