--- a/overmij.html
+++ b/overmij.html
@@ -51,7 +51,7 @@
 				</div>
 
 				<div id="ART">
-					<img src="images\AR.T_logo.jpg" />
+					<img src="images/ARTlogo.jpg" />
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Quod ea non occurrentia fingunt, vincunt Aristonem; Quippe: habes enim a rhetoribus; Duo Reges: constructio interrete. Quae diligentissime contra Aristonem dicuntur a Chryippo. Tibi hoc incredibile, quod beatissimum. In qua quid est boni praeter summam voluptatem, et eam sempiternam? Haec et tu ita posuisti, et verba vestra sunt. Theophrastus mediocriterne delectat, cum tractat locos ab Aristotele ante tractatos?</p> <br />
 
 					<p>Voor meer informatie over AR.T, bezoek:</p>
