ART info + linkedin link weg.

--- a/contact.html
+++ b/contact.html
@@ -39,13 +39,13 @@
 
 		<div id="content">
 			<div id="contact">
-				<p>Wilt u meer over mij weten? Dan kunt u mij vinden op de volgende pagina's.</p>	
+				<p>Wilt u meer over mij weten? Dan kunt u mij vinden <br />op de website van de Ateliers Reeshof Tilburg.</p>	
 
-				<div id="links">
+				<!-- <div id="links">
 					<div id="linkedin_link">
 						<a href="https://nl.linkedin.com/in/rene-boons-7446132/nl" target="_blank"><div id="linkedIn_icon"></div></a>
 						<a href="https://nl.linkedin.com/in/rene-boons-7446132/nl" target="_blank">LinkedIn /<br />Ren&eacute Boons</a>
-					</div>
+					</div> -->
 
 					<div id="ART_link">
 						<a href="http://ateliersrt.nl/rene-boons/" target="_blank"><div id="ART_icon"></div></a>
