--- a/overmij.html
+++ b/overmij.html
@@ -50,13 +50,13 @@
 					<p>Na de eerste solo expositie in het Tweesteden Ziekenhuis in Tilburg in 2004 had ik de smaak te pakken en ben ik met regelmaat aan het schilderen. Ondertussen ben ik bestuurslid van het kunstenaarscollectief AR.T (Ateliers Reeshof.Tilburg) en schilder ik iedere week met de kunstenaars van De Zolderlingen, een groep kunstenaars uit Tilburg en Goirle.</p>
 				</div>
 
-				<div id="ART">
+				<!-- <div id="ART">
 					<img src="images/ARTlogo.jpg" />
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Quod ea non occurrentia fingunt, vincunt Aristonem; Quippe: habes enim a rhetoribus; Duo Reges: constructio interrete. Quae diligentissime contra Aristonem dicuntur a Chryippo. Tibi hoc incredibile, quod beatissimum. In qua quid est boni praeter summam voluptatem, et eam sempiternam? Haec et tu ita posuisti, et verba vestra sunt. Theophrastus mediocriterne delectat, cum tractat locos ab Aristotele ante tractatos?</p> <br />
 
 					<p>Voor meer informatie over AR.T, bezoek:</p>
 					<p id="onderkant"><a href="http://ateliersrt.nl/" target="_blank">http://ateliersrt.nl/</a></p>
-				</div>
+				</div> -->
 			</div>
 
 			
