--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
 			<div id="contact">
 				<p>Wilt u meer over mij weten? Dan kunt u mij vinden <br />op de website van de Ateliers Reeshof Tilburg.</p>	
 
-				<!-- <div id="links">
-					<div id="linkedin_link">
+				<div id="links">
+					<!-- <div id="linkedin_link">
 						<a href="https://nl.linkedin.com/in/rene-boons-7446132/nl" target="_blank"><div id="linkedIn_icon"></div></a>
 						<a href="https://nl.linkedin.com/in/rene-boons-7446132/nl" target="_blank">LinkedIn /<br />Ren&eacute Boons</a>
 					</div> -->
