--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
 		<div id="header">
 			<div id="logo">
-				<a href="index.html"><img id="logo_img" src="images\logo.jpg" /></a>
+				<a href="index.html"><img id="logo_img" src="images\Logo.jpg" /></a>
 			</div>
 
 
