--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
 				</div>
 
 				<p>Voor vragen kunt u mij direct benaderen door middel van onderstaand formulier. Ik zal zo spoedig mogelijk op u reageren.</p>
-				<form action='https://formspree.io/felixboons@hotmail.com' method='post'>
+				<form action='https://formspree.io/rene.boons@live.nl' method='post'>
 					<input name="emailInput" placeholder="e-mailadres" maxlength="50" required></input>
 					<input name="subjectInput" id="subjectInput" placeholder="onderwerp" maxlength="50" required></input>
 					<textarea name="messageInput" type="text" id="messageInput" placeholder="bericht..." maxlength="500" required onkeyup="countChar()"></textarea>
