--- a/contact.html
+++ b/contact.html
@@ -55,10 +55,10 @@
 
 				<p>Voor vragen kunt u mij direct benaderen door middel van onderstaand formulier. Ik zal zo spoedig mogelijk op u reageren.</p>
 				<form action='https://formspree.io/rene.boons@live.nl' method='post'>
-					<input name="emailInput" placeholder="e-mailadres" maxlength="50" required></input>
-					<input name="subjectInput" id="subjectInput" placeholder="onderwerp" maxlength="50" required></input>
-					<textarea name="messageInput" type="text" id="messageInput" placeholder="bericht..." maxlength="500" required onkeyup="countChar()"></textarea>
-					<input name="submit" type="submit" value="Verstuur bericht"></input>
+					<input name="Emailadress" placeholder="e-mailadres" maxlength="50" required></input>
+					<input name="Onderwerp" id="subjectInput" placeholder="onderwerp" maxlength="50" required></input>
+					<textarea name="Bericht" type="text" id="messageInput" placeholder="bericht..." maxlength="500" required onkeyup="countChar()"></textarea>
+					<input name="Verzendknop" type="submit" value="Verstuur bericht"></input>
 					<p id="charLeft">500</p>
 				</form>
 			</div>
