Idem dito voor abstract.html

--- a/abstract.html
+++ b/abstract.html
@@ -35,7 +35,7 @@
 		<div id="content">
 			<div id="slideshow_holder">
 				<div id="arrow_left" onclick="fadeOut(-1, 'abstract', 19, 'abstracten')" class="home"></div> <!-- CONSTRUCTOR >>>>> (AANTAL FOTO'S VERDER/TERUG, STIJL VAN FOTO'S, MAXIMALE AANTAL FOTO'S, GEKOZEN LIJST VOOR INFO) -->
-				<div id="image_holder"><img id="img" src="photos/abstract/photo9.jpg" /></div>
+				<div id="image_holder"><img id="img" src="renboons.github.io/photos/abstract/photo9.jpg" /></div>
 				<div id="info_holder">
 					<h4 id="title">'Fuzz'</h4><br /><br />
 					<table id="info_table">
