--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
 			</div>
 			<div id="keuze_menu">
-				<div id="abstract_keuze"><a href="abstract.html"><div class="filter"></div></a><img  src="photos/abstract/photo9.JPG" /></p></div><a id="abstract_keuze_kopje" href="abstract.html"><h2>ABSTRACT</h2></a>
-				<div id="figuratief_keuze"><a href="figuratief.html"><div class="filter"></div></a><img src="photos/figuratief/photo9.JPG" /></div><a id="figuratief_keuze_kopje" href="figuratief.html"><h2>FIGURATIEF</h2></a>
+				<div id="abstract_keuze"><a href="abstract.html"><div class="filter"></div></a><img src="photos/abstract/photo9.jpg" /></p></div><a id="abstract_keuze_kopje" href="abstract.html"><h2>ABSTRACT</h2></a>
+				<div id="figuratief_keuze"><a href="figuratief.html"><div class="filter"></div></a><img src="photos/figuratief/photo9.jpg" /></div><a id="figuratief_keuze_kopje" href="figuratief.html"><h2>FIGURATIEF</h2></a>
 			</div>
 
 		</div>
