--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 			<div id="navbar">
 				<ul>
-					<li id="navActive"><a href="index.html">Galerij</a>
+					<li id="navActive"><a href="index.html">Galerie</a>
 						<ul>
 							<li id="navNotActive"><a href="abstract.html">Abstract</a></li>
 							<li id="navNotActive"><a href="figuratief.html">Figuratief</a></li>
