--- a/abstract.html
+++ b/abstract.html
@@ -19,7 +19,7 @@
 
 			<div id="navbar">
 				<ul>
-					<li style="background-color: #ba473e";><a style="color: white;" href="index.html">Galerij</a>
+					<li style="background-color: #ba473e";><a style="color: white;" href="index.html">Galerie</a>
 						<ul>
 							<li id="navActive"><a href="abstract.html">Abstract</a></li>
 							<li><a href="figuratief.html">Figuratief</a></li>
