--- a/exposities.html
+++ b/exposities.html
@@ -25,7 +25,7 @@
 
 			<div id="navbar">
 				<ul>
-					<li><a href="index.html">Galerij</a>
+					<li><a href="index.html">Galerie</a>
 						<ul>
 							<li><a href="abstract.html">Abstract</a></li>
 							<li><a href="figuratief.html">Figuratief</a></li>
