Info for first photo on abstract.html fixed

--- a/abstract.html
+++ b/abstract.html
@@ -37,9 +37,9 @@
 				<div id="arrow_left" onclick="fadeOut(-1, 'abstract', 20, 'abstracten')" class="home"></div> <!-- CONSTRUCTOR >>>>> (AANTAL FOTO'S VERDER/TERUG, STIJL VAN FOTO'S, MAXIMALE AANTAL FOTO'S, GEKOZEN LIJST VOOR INFO) -->
 				<div id="image_holder"><img id="img" src="photos/abstract/photo12.jpg" /></div>
 				<div id="info_holder">
-					<h4 id="title">'Fuzz'</h4><br /><br />
+					<h4 id="title">'Imagination'</h4><br /><br />
 					<table id="info_table">
-						<tr><td>Afmeting</td><td id="afm">50 x 60 (cm)</td></tr>
+						<tr><td>Afmeting</td><td id="afm">50 x 50 (cm)</td></tr>
 						<tr><td>Techniek</td><td id="tech">Acryl op doek</td></tr>
 						<!-- <tr><td>Jaar</td><td id="jaar">YYYY</td></tr> -->
 						<tr><td>Prijs</td><td id="prijs">450,- (&euro;)</td></tr>
