--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 		<div id="footer">
 			<div id="copyright"><p>&copy 2017 Ren&eacute Boons &nbsp | &nbsp Alle rechten voorbehouden</p></div>
-			<div id="creator"><p>Website door Felix Boons & Ruben</p></div>
+			<div id="creator"><p>Website door Felix Boons</p></div>
 		</div>
 
 
