--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,8 @@
 
 		<div id="content">
 			<div id="contact">
-				<p>Wilt u meer over mij weten? Dan kunt u mij vinden <br />op de website van de Ateliers Reeshof Tilburg.</p>	
+					<div id="pasfoto"></div>
+					<p id="upperPar">Wilt u meer over mij weten? Dan kunt u mij vinden <br />op de website van de Ateliers Reeshof Tilburg.</p>
 
 				<div id="links">
 					<!-- <div id="linkedin_link">
