--- a/exposities.html
+++ b/exposities.html
@@ -123,7 +123,7 @@
 						<td>Gilze</td>
 						<td>AR.T</td>
 					</tr>
-					<tr class="extraRow"><td colspan="4">&raquo In mei 2012.</td></tr>
+					<tr class="extraRow"><td colspan="4">&raquo In juni 2012.</td></tr>
 					<tr class="extraRow"><td colspan="2"><img src="photos/overig/poster_expositie.jpg" alt="Expositie_poster" /></td></tr>
 
 					<tr class="tableRow">
