--- a/overmij.html
+++ b/overmij.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Ren&eacute Boons | Over mij</title>
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
-	<meta name="description" content="De kunstgalerij van René Boons." />
-	<meta name="keywords" content="kunstgalerij, rene boons, portfolio, schilderij, schilderijen" />
+	<meta name="description" content="De kunstgalerie van René Boons." />
+	<meta name="keywords" content="kunstgalerie, rene boons, portfolio, schilderij, schilderijen" />
 	
 	<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
