--- a/figuratief.html
+++ b/figuratief.html
@@ -3,8 +3,9 @@
 <head>
 	<title>Ren&eacute Boons | Galerij</title>
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
-	<meta name="description" content="De kunstgalerij van René Boons." />
-	<meta name="keywords" content="kunstgalerij, kunst,rene boons, portfolio, schilderij, schilderijen" />
+	<meta name="description" content="De kunstgalerie van René Boons." />
+	<meta name="keywords" content="kunstgalerie, kunst, rene boons, portfolio, schilderij, schilderijen, acryl,
+			acrylverf, abstract, figuratief, exposeren, expositie, expositie, Tilburg, Reeshof, atelier, ART, Ateliers Reeshof Tilburg, OAR, Open Ateliers Reeshof" />
 
 	<link href="style.css" type="text/css" rel="stylesheet" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
