--- a/overmij.html
+++ b/overmij.html
@@ -4,7 +4,9 @@
 	<title>Ren&eacute Boons | Over mij</title>
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
 	<meta name="description" content="De kunstgalerie van René Boons." />
-	<meta name="keywords" content="kunstgalerie, rene boons, portfolio, schilderij, schilderijen" />
+	<meta name="keywords" content="kunstgalerie, kunst, rene boons, portfolio, schilderij, schilderijen, acryl,
+			acrylverf, abstract, figuratief, exposeren, expositie, expositie, Tilburg, Reeshof, atelier, ART, Ateliers Reeshof Tilburg, OAR, Open Ateliers Reeshof" />
+	<meta name="viewport" content="width=device-width,initial-scale=1">
 	
 	<link href="style.css" type="text/css" rel="stylesheet" />
 </head>
