--- a/figuratief.html
+++ b/figuratief.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Ren&eacute Boons | Galerie</title>
+	<title>Ren&eacute Boons | Galerij</title>
 	<link rel="shortcut icon" type="image/png" href="images/favicon.png">
 	<meta name="description" content="De kunstgalerie van René Boons." />
 	<meta name="keywords" content="kunstgalerie, kunst, rene boons, portfolio, schilderij, schilderijen, acryl,
 			acrylverf, abstract, figuratief, exposeren, expositie, expositie, Tilburg, Reeshof, atelier, ART, Ateliers Reeshof Tilburg, OAR, Open Ateliers Reeshof" />
-	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<link href="style.css" type="text/css" rel="stylesheet" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
