--- a/index.html
+++ b/index.html
@@ -6,32 +6,13 @@
 	<meta name="description" content="De kunstgalerie van René Boons." />
 	<meta name="keywords" content="kunstgalerie, kunst, rene boons, portfolio, schilderij, schilderijen, acryl,
 			acrylverf, abstract, figuratief, exposeren, expositie, expositie, Tilburg, Reeshof, atelier, ART, Ateliers Reeshof Tilburg, OAR, Open Ateliers Reeshof" />
-	<meta name="viewport" content="width=device-width,initial-scale=1">
 
 	<link href="style.css" type="text/css" rel="stylesheet" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 </head>
 
 <body onload="fadeIn()">
-	
-
 	<div id="wrapper">
-
-	<div class="menu">
-		<div id="menuHeader">
-			MENU
-		</div>
-	</div>
-	
-		<div class="menuBtn">
-			<div id="hamburger"></div>
-		</div>
-
-		<a href="index.html">
-			<div id="phone_header">
-				<div id="phone_logo"><img id="phone_logo_img" src="images/Logo.jpg" /></div>
-			</div>
-		</a>
 
 		<div id="header">
 			<div id="logo">
@@ -60,8 +41,8 @@
 
 			</div>
 			<div id="keuze_menu">
-				<div id="abstract_keuze"><a href="abstract.html"><p id="phone_ab_keuze_kopje">ABSTRACT</p><div class="filter"></div></a><a href="abstract.html"><img src="photos/abstract/photo12.jpg" /></a></p></div><a id="abstract_keuze_kopje" href="abstract.html"><h2>ABSTRACT</h2></a>
-				<div id="figuratief_keuze"><a href="figuratief.html"><p id="phone_fig_keuze_kopje">FIGURATIEF</p><div class="filter"></div></a><a href="figuratief.html"><img src="photos/figuratief/photo9.jpg" /></a></div><a id="figuratief_keuze_kopje" href="figuratief.html"><h2>FIGURATIEF</h2></a>
+				<div id="abstract_keuze"><a href="abstract.html"><div class="filter"></div></a><img src="photos/abstract/photo12.jpg" /></p></div><a id="abstract_keuze_kopje" href="abstract.html"><h2>ABSTRACT</h2></a>
+				<div id="figuratief_keuze"><a href="figuratief.html"><div class="filter"></div></a><img src="photos/figuratief/photo9.jpg" /></div><a id="figuratief_keuze_kopje" href="figuratief.html"><h2>FIGURATIEF</h2></a>
 			</div>
 		</div>
 
