index-almost-done

--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
 
 	<div id="wrapper">
 
-	<div class="menu">
-		<div id="menuHeader">
-			MENU
+		<div class="menu">
+			<ul>
+				<li id="menuNavActive"><a href="index.html">Galerie</a>
+					<ul>
+						<li id="menuNavNotActive"><a href="abstract.html">Abstract</a></li>
+						<li id="menuNavNotActive"><a href="figuratief.html">Figuratief</a></li>
+					</ul>
+				</li>
+				<li><a href="exposities.html">Exposities</a></li>
+				<li><a href="overmij.html">Over mij</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
 		</div>
-	</div>
 	
 		<div class="menuBtn">
 			<div id="hamburger"></div>
