Header + menu added to each page

--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,37 @@
 <body>
 	<div id="wrapper">
 
+		<!--phone display items-->
+		<div class="menu">
+			<div id="navWrapper">
+				<ul>
+					<li id="menuNavActive"><a class="firstNavItem" href="index.html">Galerie</a>
+						<ul>
+							<li id="menuNavNotActive"><a href="abstract.html">Abstract</a></li>
+							<li id="menuNavNotActive"><a href="figuratief.html">Figuratief</a></li>
+						</ul>
+					</li>
+					<li><a class="secondNavItem" href="exposities.html">Exposities</a></li>
+					<li><a href="overmij.html">Over mij</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
+			</div>
+			<div id="menuFooter">
+				<p>&copy 2017 Ren&eacute Boons &nbsp | &nbsp Alle rechten voorbehouden</p>
+				<p>Website door Felix Boons</p>
+			</div>
+		</div>
 
+		<div class="menuBtn">
+			<div id="hamburger"></div>
+		</div>
 
-
+		<a href="index.html">
+			<div id="phone_header">
+				<div id="phone_logo"><img id="phone_logo_img" src="images/Logo.jpg" /></div>
+			</div>
+		</a>
+		<!--end phone display items-->
 
 		<div id="header">
 			<div id="logo">
