current page indiciation (with red text)

--- a/abstract.html
+++ b/abstract.html
@@ -21,7 +21,7 @@
 				<ul>
 					<li id="menuNavActive"><a class="firstNavItem" href="index.html">Galerie</a>
 						<ul>
-							<li id="menuNavNotActive"><a href="abstract.html">Abstract</a></li>
+							<li id="menuNavActive"><a href="abstract.html">Abstract</a></li>
 							<li id="menuNavNotActive"><a href="figuratief.html">Figuratief</a></li>
 						</ul>
 					</li>
