--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 		<div class="menu">
 			<div id="navWrapper">
 				<ul>
-					<li id="menuNavActive"><a class="firstNavItem" href="index.html">Galerie</a>
+					<li><a class="firstNavItem" href="index.html">Galerie</a>
 						<ul>
 							<li id="menuNavNotActive"><a href="abstract.html">Abstract</a></li>
 							<li id="menuNavNotActive"><a href="figuratief.html">Figuratief</a></li>
@@ -26,7 +26,7 @@
 					</li>
 					<li><a class="secondNavItem" href="exposities.html">Exposities</a></li>
 					<li><a href="overmij.html">Over mij</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li id="menuNavActive"><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<div id="menuFooter">
