--- a/exposities.html
+++ b/exposities.html
@@ -19,13 +19,13 @@
 		<div class="menu">
 			<div id="navWrapper">
 				<ul>
-					<li id="menuNavActive"><a class="firstNavItem" href="index.html">Galerie</a>
+					<li><a class="firstNavItem" href="index.html">Galerie</a>
 						<ul>
 							<li id="menuNavNotActive"><a href="abstract.html">Abstract</a></li>
 							<li id="menuNavNotActive"><a href="figuratief.html">Figuratief</a></li>
 						</ul>
 					</li>
-					<li><a class="secondNavItem" href="exposities.html">Exposities</a></li>
+					<li id="menuNavActive"><a class="secondNavItem" href="exposities.html">Exposities</a></li>
 					<li><a href="overmij.html">Over mij</a></li>
 					<li><a href="contact.html">Contact</a></li>
 				</ul>
