--- a/figuratief.html
+++ b/figuratief.html
@@ -22,7 +22,7 @@
 					<li id="menuNavActive"><a class="firstNavItem" href="index.html">Galerie</a>
 						<ul>
 							<li id="menuNavNotActive"><a href="abstract.html">Abstract</a></li>
-							<li id="menuNavNotActive"><a href="figuratief.html">Figuratief</a></li>
+							<li id="menuNavActive"><a href="figuratief.html">Figuratief</a></li>
 						</ul>
 					</li>
 					<li><a class="secondNavItem" href="exposities.html">Exposities</a></li>
