info_holder fix on low width screens?

--- a/figuratief.html
+++ b/figuratief.html
@@ -70,7 +70,7 @@
 		<div id="content">
 			<div id="slideshow_holder">
 				<div id="arrow_left" onclick="fadeOut(-1, 'figuratief', 16, 'figuratieven')"></div> <!-- CONSTRUCTOR >>>>> (AANTAL FOTO'S VERDER/TERUG, STIJL VAN FOTO'S, MAXIMALE AANTAL FOTO'S, GEKOZEN LIJST VOOR INFO) -->
-				<div id="image_holder"><img id="img" src="photos/figuratief/photo9.jpg" /></div>
+				<div id="image_holder"><img id="img" id="actualImg" src="photos/figuratief/photo9.jpg" /></div>
 				<div id="info_holder">
 					<h4 id="title">'Oehoe'</h4><br /><br />
 					<table id="info_table">
