overmij layout fixed

--- a/overmij.html
+++ b/overmij.html
@@ -80,6 +80,12 @@
 					<p>Na de eerste solo expositie in het Tweesteden Ziekenhuis in Tilburg in 2004 had ik de smaak te pakken en ben ik met regelmaat aan het schilderen. Ondertussen ben ik bestuurslid van het kunstenaarscollectief AR.T (Ateliers Reeshof.Tilburg) en schilder ik iedere week met de kunstenaars van De Zolderlingen, een groep kunstenaars uit Tilburg en Goirle.</p>
 				</div>
 
+				<div id="mobilePar">
+					<p>Na tientallen jaren niets met de tekenhobby gedaan te hebben, kwamen in 2003 de kunstkriebels opzetten na een bezoek aan een atelier van een bevriend kunstenares en het volgen van wat workshops. Hierin werd het eerste contact met acryl- en olieverf en het schilderen op doek gelegd.</p><br />
+
+					<p>Na de eerste solo expositie in het Tweesteden Ziekenhuis in Tilburg in 2004 had ik de smaak te pakken en ben ik met regelmaat aan het schilderen. Ondertussen ben ik bestuurslid van het kunstenaarscollectief AR.T (Ateliers Reeshof.Tilburg) en schilder ik iedere week met de kunstenaars van De Zolderlingen, een groep kunstenaars uit Tilburg en Goirle.</p>
+				</div>
+
 				<!-- <div id="ART">
 					<img src="images/ARTlogo.jpg" />
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ego vero isti, inquam, permitto. Quod ea non occurrentia fingunt, vincunt Aristonem; Quippe: habes enim a rhetoribus; Duo Reges: constructio interrete. Quae diligentissime contra Aristonem dicuntur a Chryippo. Tibi hoc incredibile, quod beatissimum. In qua quid est boni praeter summam voluptatem, et eam sempiternam? Haec et tu ita posuisti, et verba vestra sunt. Theophrastus mediocriterne delectat, cum tractat locos ab Aristotele ante tractatos?</p> <br />
