overmij layout fix

--- a/overmij.html
+++ b/overmij.html
@@ -75,9 +75,9 @@
 					<br /><br /><br /><br /><br />
 					<p>Voor mij was al op jonge leeftijd duidelijk dat ik in de landbouw mijn brood zou gaan verdienen. Wanneer het geen eigen boerderij zou worden, dan toch iets in de periferie hiervan. Na een bezoek aan familie met een boerderij met melkkoeien in Overijssel was ik meteen verkocht en het leven op het platteland tussen de landbouwhuisdieren zou mijn toekomst worden. Het runnen van een eigen bedrijf lag echter niet in het verschiet. De belangstelling voor koeien, varkens, geiten en andere landbouwdieren is echter gebleven en mijn werk in de agrarische sector brengt mij regelmatig in contact met de sector.</p><br />
 
-					<p>Na tientallen jaren niets met de tekenhobby gedaan te hebben, kwamen in 2003 de kunstkriebels opzetten na een bezoek aan een atelier van een bevriend kunstenares en het volgen van wat workshops. Hierin werd het eerste contact met acryl- en olieverf en het schilderen op doek gelegd.</p><br />
+					<p id="pcPar">Na tientallen jaren niets met de tekenhobby gedaan te hebben, kwamen in 2003 de kunstkriebels opzetten na een bezoek aan een atelier van een bevriend kunstenares en het volgen van wat workshops. Hierin werd het eerste contact met acryl- en olieverf en het schilderen op doek gelegd.</p><br />
 
-					<p>Na de eerste solo expositie in het Tweesteden Ziekenhuis in Tilburg in 2004 had ik de smaak te pakken en ben ik met regelmaat aan het schilderen. Ondertussen ben ik bestuurslid van het kunstenaarscollectief AR.T (Ateliers Reeshof.Tilburg) en schilder ik iedere week met de kunstenaars van De Zolderlingen, een groep kunstenaars uit Tilburg en Goirle.</p>
+					<p id="pcPar">Na de eerste solo expositie in het Tweesteden Ziekenhuis in Tilburg in 2004 had ik de smaak te pakken en ben ik met regelmaat aan het schilderen. Ondertussen ben ik bestuurslid van het kunstenaarscollectief AR.T (Ateliers Reeshof.Tilburg) en schilder ik iedere week met de kunstenaars van De Zolderlingen, een groep kunstenaars uit Tilburg en Goirle.</p>
 				</div>
 
 				<div id="mobilePar">
