links work again

--- a/figuratief.html
+++ b/figuratief.html
@@ -11,8 +11,8 @@
 	<link href="style.css" type="text/css" rel="stylesheet" />
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--mobile jquery-->
-	<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-	<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
+	<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 </head>
 
 <body>
@@ -24,13 +24,13 @@
 				<ul>
 					<li id="menuNavActive"><a class="firstNavItem" href="index.html">Galerie</a>
 						<ul>
-							<li id="menuNavNotActive"><a href="abstract.html">Abstract</a></li>
-							<li id="menuNavActive"><a href="figuratief.html">Figuratief</a></li>
+							<li id="menuNavNotActive"><a href="abstract.html" data-ajax="false">Abstract</a></li>
+							<li id="menuNavActive"><a href="figuratief.html" data-ajax="false">Figuratief</a></li>
 						</ul>
 					</li>
-					<li><a class="secondNavItem" href="exposities.html">Exposities</a></li>
-					<li><a href="overmij.html">Over mij</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a class="secondNavItem" href="exposities.html" data-ajax="false">Exposities</a></li>
+					<li><a href="overmij.html" data-ajax="false">Over mij</a></li>
+					<li><a href="contact.html" data-ajax="false">Contact</a></li>
 				</ul>
 			</div>
 			<div id="menuFooter">
@@ -43,7 +43,7 @@
 			<div id="hamburger"></div>
 		</div>
 
-		<a href="index.html">
+		<a href="index.html" data-ajax="false">
 			<div id="phone_header">
 				<div id="phone_logo"><img id="phone_logo_img" src="images/Logo.jpg" /></div>
 			</div>
@@ -52,20 +52,20 @@
 		
 		<div id="header">
 			<div id="logo">
-				<a href="index.html"><img id="logo_img" src="images\Logo.jpg" /></a>
+				<a href="index.html" data-ajax="false"><img id="logo_img" src="images\Logo.jpg" /></a>
 			</div>
 
 			<div id="navbar">
 				<ul>
 					<li style="background-color: #ba473e";><a style="color: white;" href="index.html">Galerie</a>
 						<ul>
-							<li><a href="abstract.html">Abstract</a></li>
-							<li id="navActive"><a href="figuratief.html">Figuratief</a></li>
+							<li><a href="abstract.html" data-ajax="false">Abstract</a></li>
+							<li id="navActive"><a href="figuratief.html" data-ajax="false">Figuratief</a></li>
 						</ul>
 					</li>
-					<li><a href="exposities.html">Exposities</a></li>
-					<li><a href="overmij.html">Over mij</a></li>
-					<li><a href="contact.html">Contact</a></li>
+					<li><a href="exposities.html" data-ajax="false">Exposities</a></li>
+					<li><a href="overmij.html" data-ajax="false">Over mij</a></li>
+					<li><a href="contact.html" data-ajax="false">Contact</a></li>
 				</ul>
 			</div>
 		</div>
