contact layout fix

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 		<div id="content">
 			<div id="contact">
 					<div id="pasfoto"></div>
-					<p id="upperPar">Wilt u meer over mij weten? Dan kunt u mij vinden <br />op de website van de Ateliers Reeshof Tilburg.</p>
+					<p id="upperPar">Wilt u meer over mij weten? Dan kunt u mij vinden op de website van de Ateliers Reeshof Tilburg.</p>
 
 				<div id="links">
 					<!-- <div id="linkedin_link">
