--- a/exposities.html
+++ b/exposities.html
@@ -70,11 +70,12 @@
 
 		<div id="content">
 			<div id="tekstBG">
-				<h2>Galerie De Roos - Tilburg</h2>
-				<h3>Mei 2017</h3>
-					<p>In 2017 zal ik samen met mijn collega&#39s van AR.T exposeren in Galerie De Roos aan de Veldhovenring 25 in Tilburg. Galerie De Roos maakt deel uit van de Galerie-route die de Bestedring, Veldhovenring en Wilhelminapark verbindt met De Pont en het Textielmuseum.</p><br />
-					<p>De expositie zal op zondag 7 mei om 14.30 uur officieel worden geopend. U bent van harte uitgenodigd.</p><br />
-					<p>Galerie De Roos is iedere zaterdag en zondag van 7 t/m 28 mei 2017 te bezoeken van 14:00 tot 17:00 uur</p>
+				<h2>GCR – Tilburg en Steenfabriek – Gilze</h2>
+				<h3>Mei 2018 t/m augustus 2018 en de weekeinden 3/4 november en 10/11 november 2018</h3>
+					<p>In 2018 zal ik eerst solo exposeren in het Gezondheidscentrum Reeshof (GCR) in de Dubbeldamstraat 2-10 in Tilburg en vervolgens zal ik samen met mijn 
+						collega’s van AR.T exposeren in de Galerie Steenfabriek in Gilze (adres is ook: Steenfabriek 1, Gilze).
+						De expositie in GCR is van 3 mei tot en met eind augustus. In de Steenfabriek in Gilze zullen wij het weekend van 3 en 4 november en het weekend daaropvolgend (10 en 11 november) exposeren.<br />
+					<p>De openingstijden van de Steenfabriek zal ik zodra deze bekend zijn doorgeven.</p>
 			</div>
 
 			<div id="mapsImg">
@@ -92,6 +93,34 @@
 				</table>
 
 				<table>
+					<tr class="tableRow">
+						<td>2019</td>
+						<td>De Wandelgangen</td>
+						<td>Hilvarenbeek</td>
+						<td>AR.T</td>
+					</tr>
+					
+					<tr class="tableRow">
+						<td>2018</td>
+						<td>De Steenfabriek</td>
+						<td>Gilze</td>
+						<td>Zolderlingen</td>
+					</tr>
+					
+					<tr class="tableRow">
+						<td>2018</td>
+						<td>De Gezondheidscentrum Reeshof</td>
+						<td>Tilburg</td>
+						<td>Solo</td>
+					</tr>
+
+					<tr class="tableRow">
+						<td>2017</td>
+						<td>Galerie 'De Roos'</td>
+						<td>Tilburg</td>
+						<td>AR.T</td>
+					</tr>
+
 					<tr class="tableRow kleurRow">
 						<td>2016 <img class="table_image_icon" src="images\image_icon.png" alt="click_for_photos" /></td>
 						<td>Galerie 'De Verdieping'</td>
