Row styling fix

--- a/exposities.html
+++ b/exposities.html
@@ -99,6 +99,7 @@
 						<td>Hilvarenbeek</td>
 						<td>AR.T</td>
 					</tr>
+					<tr class="extraRow"><td colspan="4"></td></tr>
 					
 					<tr class="tableRow">
 						<td>2018</td>
@@ -106,6 +107,7 @@
 						<td>Gilze</td>
 						<td>Zolderlingen</td>
 					</tr>
+					<tr class="extraRow"><td colspan="4"></td></tr>
 					
 					<tr class="tableRow">
 						<td>2018</td>
@@ -113,6 +115,7 @@
 						<td>Tilburg</td>
 						<td>Solo</td>
 					</tr>
+					<tr class="extraRow"><td colspan="4"></td></tr>
 
 					<tr class="tableRow">
 						<td>2017</td>
@@ -120,6 +123,7 @@
 						<td>Tilburg</td>
 						<td>AR.T</td>
 					</tr>
+					<tr class="extraRow"><td colspan="4"></td></tr>
 
 					<tr class="tableRow kleurRow">
 						<td>2016 <img class="table_image_icon" src="images\image_icon.png" alt="click_for_photos" /></td>
