--- a/exposities.html
+++ b/exposities.html
@@ -93,13 +93,12 @@
 				</table>
 
 				<table>
-					<tr class="tableRow">
+					<tr class="tableRow kleurRow">
 						<td>2019</td>
 						<td>De Wandelgangen</td>
 						<td>Hilvarenbeek</td>
 						<td>AR.T</td>
 					</tr>
-					<tr class="extraRow"><td colspan="4"></td></tr>
 					
 					<tr class="tableRow">
 						<td>2018</td>
@@ -107,15 +106,13 @@
 						<td>Gilze</td>
 						<td>Zolderlingen</td>
 					</tr>
-					<tr class="extraRow"><td colspan="4"></td></tr>
 					
-					<tr class="tableRow">
+					<tr class="tableRow kleurRow">
 						<td>2018</td>
 						<td>De Gezondheidscentrum Reeshof</td>
 						<td>Tilburg</td>
 						<td>Solo</td>
 					</tr>
-					<tr class="extraRow"><td colspan="4"></td></tr>
 
 					<tr class="tableRow">
 						<td>2017</td>
@@ -123,7 +120,6 @@
 						<td>Tilburg</td>
 						<td>AR.T</td>
 					</tr>
-					<tr class="extraRow"><td colspan="4"></td></tr>
 
 					<tr class="tableRow kleurRow">
 						<td>2016 <img class="table_image_icon" src="images\image_icon.png" alt="click_for_photos" /></td>
